gcc/testsuite/gdc.test/compilable/imports/test14666b.d
module imports.test14666b;

import test14666;

struct Token
{
    Location location;
}
