gcc/testsuite/gdc.test/fail_compilation/extra-files/a14446.d
module a14446;

struct CDBMaker
{
    import ice14446;
}
